# pyproject.toml — project metadata and dependency declarations for signal_dash
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "signal_dash"
version = "0.1.0"
description = "Lightweight social media intelligence dashboard powered by Reddit, Mastodon, and LLM classification."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Signal Dash Contributors" }
]
keywords = ["social-listening", "sentiment", "dashboard", "fastapi", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "openai>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "respx>=0.21.1",
]

[project.scripts]
signal-dash = "signal_dash.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["signal_dash*"]

[tool.setuptools.package-data]
signal_dash = ["templates/**/*.html"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
